[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["adel23444 <khamidullin23444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
django-rest-framework = "^0.1.0"
django-rest-framework-jwk = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
