[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["adel23444 <khamidullin23444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
djangorestframework = "^3.12.0"
djangorestframework-simplejwt = "^4.7.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
